packages/build/tests/error/fixtures/fail_build_post_deploy/plugin.js
export default {
  onEnd({
    utils: {
      build: { failBuild },
    },
  }) {
    failBuild('test')
  },
}
